--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-
 <head>
-  <title>Home</title>
+  <title>Naresh Mitawa</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <link rel="stylesheet" href="./index.css">
+  <link rel="icon" type="image/png" href="./assets/images/favicon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
@@ -17,7 +17,7 @@
   <img class="img-2" src="./img/Ellipse 57.png">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="./img/image 6 (Traced).png"></a>
+      <a class="navbar-brand" href="#"><img src="./img/logo.png"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -25,22 +25,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">services</a>
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">why flow</a>
+            <a class="nav-link" href="./web -page/index.html">Page 1</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">our process</a>
+            <a class="nav-link" href="./page 2/Index.html">Page 2</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">about</a>
+            <a class="nav-link" href="#">Contact Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">recent work</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">contact</a>
+            <a class="nav-link" href="./Naresh_Mitawa_Resume_Updated.pdf" target="_blank">Resume</a>
           </li>
         </ul>
       </div>
@@ -54,7 +51,7 @@
           <div class="card-body">
             <h5 class="card-title">
               <div class="jumbotron">
-                <h1> Change the World Through Your Message</h1>
+                <h1> Hi! <br> I am Naresh Mitawa </h1>
                 <p>Meaningful content for authentic brands:</p>
               </div>
             </h5>
@@ -69,10 +66,10 @@
             </ul>
             <div class="Call_Wrapper">
               <div class="schedule_btn">
-                <button type="button">Schedule a call </button>
+                <button type="button"><a href="tel:8377855100">Schedule a call</a></button>
               </div>
               <div class="Content_planner_wrapper">
-                <input type="date" />
+                <input type="date"/>
                 <div class="content_text">
                   <p> Free Content Planner</p>
                 </div>
