add portfolio page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="./page 2/Index.html">Page 2</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Me</a>
+            <a class="nav-link" href="mailto:nsmitawa123@gmail.com">Contact Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Naresh_Mitawa_Resume_Updated.pdf" target="_blank">Resume</a>
@@ -52,27 +52,24 @@
             <h5 class="card-title">
               <div class="jumbotron">
                 <h1> Hi! <br> I am Naresh Mitawa </h1>
-                <p>Meaningful content for authentic brands:</p>
+                <p>Skills</p>
               </div>
             </h5>
             <ul class="list-group list-group-horizontal">
-              <li class="list-group-item"><img class="cannabis_img" alt="Cannabis" src="./img/Vector.png">Cannabis</li>
-              <li class="list-group-item"><img class="Hemp_img" alt="Hemp&CBD" src="./img/Vector (1).png">Hemp & CBD
+              <li class="list-group-item"><img class="cannabis_img" alt="Cannabis" src="./img/Vector.png">HTML</li>
+              <li class="list-group-item"><img class="Hemp_img" alt="Hemp&CBD" src="./img/Vector (1).png">CSS & Bootstrap
               </li>
               <li class="list-group-item"><img class="Pschedelics_img" alt="Psychedelics"
-                  src="./img/Vector (2).png">Psychedelics</li>
-              <li class="list-group-item"><img class="yoga_img" alt="Yoga & Medidation" src="./img/Vector (3).png">Yoga
-                & Meditation</li>
+                  src="./img/Vector (2).png">Wordpress & Photoshop</li>
+              <li class="list-group-item"><img class="yoga_img" alt="Yoga & Medidation" src="./img/Vector (3).png">JavaScript</li>
+              <li class="list-group-item"><img class="yoga_img" alt="Yoga & Medidation" src="./img/Vector (3).png">React(Learning)</li>
             </ul>
             <div class="Call_Wrapper">
               <div class="schedule_btn">
                 <button type="button"><a href="tel:8685014330">Schedule a call</a></button>
               </div>
-              <div class="Content_planner_wrapper">
-                <input type="date"/>
-                <div class="content_text">
-                  <p> Free Content Planner</p>
-                </div>
+              <div class="schedule_btn">
+                <button type="button"><a href="mailto:nsmitawa123@gmail.com">Contact me</a></button>
               </div>
             </div>
            </div>
