new UI portfolio page

--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
+
 <!DOCTYPE html>
+
 <head>
   <title>Naresh Mitawa</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <link rel="stylesheet" href="./index.css">
-  <link rel="icon" type="image/png" href="./assets/images/favicon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Bebas Neue' rel='stylesheet'>
 </head>
 
 <body>
-  <header>
-  <img class="img-1" src="./img/Ellipse 58.png">
-  <img class="img-2" src="./img/Ellipse 57.png">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
       <a class="navbar-brand" href="#"><img src="./img/logo.png"></a>
@@ -25,16 +23,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active-nav" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./web -page/index.html">Page 1</a>
+            <a class="nav-link" href="#">About me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./page 2/Index.html">Page 2</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="mailto:nsmitawa123@gmail.com">Contact Me</a>
+            <a class="nav-link" href="#">Contact Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Naresh_Mitawa_Resume_Updated.pdf" target="_blank">Resume</a>
@@ -43,137 +38,94 @@
       </div>
     </div>
   </nav>
-</header>
   <div class="container">
     <div class="row">
-      <div class="col-sm-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">
-              <div class="jumbotron">
-                <h1> Hi! <br> I am Naresh Mitawa </h1>
-                <p>Skills</p>
-              </div>
-            </h5>
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item"><img class="cannabis_img" alt="Cannabis" src="./img/Vector.png">HTML</li>
-              <li class="list-group-item"><img class="Hemp_img" alt="Hemp&CBD" src="./img/Vector (1).png">CSS & Bootstrap
-              </li>
-              <li class="list-group-item"><img class="Pschedelics_img" alt="Psychedelics"
-                  src="./img/Vector (2).png">Wordpress & Photoshop</li>
-              <li class="list-group-item"><img class="yoga_img" alt="Yoga & Medidation" src="./img/Vector (3).png">JavaScript</li>
-              <li class="list-group-item"><img class="yoga_img" alt="Yoga & Medidation" src="./img/Vector (3).png">React(Learning)</li>
-            </ul>
-            <div class="Call_Wrapper">
-              <div class="schedule_btn">
-                <button type="button"><a href="tel:8685014330">Schedule a call</a></button>
-              </div>
-              <div class="schedule_btn">
-                <button type="button"><a href="mailto:nsmitawa123@gmail.com">Contact me</a></button>
-              </div>
-            </div>
-           </div>
+      <div class="col contant-heading">
+        <div class="heading-top">Web Designer / Wev Developer</div>
+        <div class="main-heading"> Hi I'm<br><span>Naresh Mitawa</span></div>
+        <button class="button"><a href="tel:8685014330">Schedule a call</a></button>
+      </div>
+      <div class="col img-section">
+        <div class="section-one-img">
+          <div class="mobile-img-1">
+            <img src="./img/Ellipse 1.svg" alt="background">
+          </div>
+          <img class="img-2" src="./img/Group 30356.png" alt="mobile-img">
+          <img class="img-3" src="./img/Group 26.svg" alt="mobile-img">
+          <img class="img-4" src="./img/Ellipse 12.png" alt="mobile-img">
         </div>
       </div>
-      <div class="col-sm-6">
-        <div class="card bg-dark text-white banner">
-          <img src="./img/image 1680.png" class="card-img" alt="...">
-          <div class="card_wrapper">
-          <div class="card-img-overlay">
-            <div class="card mb-5">
-              <div class="row g-0">
-                <div class="col-md-4 img-text-bg">
-                  <img src="./img/Vector==.png" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <p class="card-title img-text contant_heading">Content writing</p>
-                    <p class="card-text img-text-desc">Do you have a marketing guru on your team that needs help?
-                      Are you just starting to build your content strategy? Flow Content’s experienced team of
-                      writers can fill the void, crafting honest, compelling, and SEO optimized stories for your brand.
-                    </p>
-                    <ul class="items_list">
-                      <li>Blogs</li>
-                      <li>Case Studies</li>
-                      <li>Web Copy</li>
-                      <li>Newsletters</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card-img-overlay">
-            <div class="card mb-5">
-              <div class="row g-0">
-                <div class="col-md-4 img-text-bg">
-                  <img src="./img/Vector==.png" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <p class="card-title img-text contant_heading">Content writing</p>
-                    <p class="card-text img-text-desc">Do you have a marketing guru on your team that needs help?
-                      Are you just starting to build your content strategy? Flow Content’s experienced team of
-                      writers can fill the void, crafting honest, compelling, and SEO optimized stories for your brand.
-                    </p>
-                    <ul class="items_list">
-                      <li>Blogs</li>
-                      <li>Case Studies</li>
-                      <li>Web Copy</li>
-                      <li>Newsletters</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card-img-overlay">
-
-            <div class="card mb-5">
-              <div class="row g-0">
-                <div class="col-md-4 img-text-bg">
-                  <img src="./img/Vector==.png" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <p class="card-title img-text contant_heading">Content writing</p>
-                    <p class="card-text img-text-desc">Do you have a marketing guru on your team that needs help?
-                      Are you just starting to build your content strategy? Flow Content’s experienced team of
-                      writers can fill the void, crafting honest, compelling, and SEO optimized stories for your brand.
-                    </p>
-                    <ul class="items_list">
-                      <li>Blogs</li>
-                      <li>Case Studies</li>
-                      <li>Web Copy</li>
-                      <li>Newsletters</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="body_content">
-      <p class="body_content_heading">
-        Content Marketing that Aligns with
-        Your Vision
-      </p>
-
-      <p class="body_content_text">
-        You built a brand with purpose. Now you need a wordsmith to tell the story. You’re not looking for marketing
-        fluff. You want someone who can translate your vision in your own words (with fewer run-on sentences) 😉.
-        Meaningful, action-driven content is what you seek.
-      </p>
-
     </div>
   </div>
-  <footer>
-    
-  </footer>
+  <section>
+    <div class="section-two-title">Learn More Create More</div>
+    <div class="section-two-heading"> Work Design</div>
+  </section>
+  <div class="container">
+    <div class="row">
+      <div class="col coloum-box active ">
+        <img src="./img/video.svg" alt="icon">
+        <div class="icon-name">Landing Page</div>
+        <!-- <button type="button" class="btn btn-light"><a href="./11-June/index.html" target="_blank"></a>Know More</button> -->
+        <button class="btn btn-light"><a class="landing-button" href="./11-June/index.html" target="_blank">Know more >></a></button>
+      </div>
+      <div class="col coloum-box ">
+        <img src="./img/abacus (1) (1).svg" alt="icon">
+        <div class="icon-name"> landing Page-2</div>
+        <button class="btn btn-light special"><a class="landing-button-2" href="./page 2/Index.html" target="_blank">Know more >></a></button>
+      </div>
+      <div class="col coloum-box ">
+        <img src="./img/abacus (1) (1).svg" alt="icon">
+        <div class="icon-name"> Figma PSD</div>
+        <button class="btn btn-light special"><a class="landing-button-2" href="./PSD to HTML/UI-Page.pdf" target="_blank">Know more >></a></button>
+      </div>
+      <div class="col coloum-box ">
+        <img src="./img/abacus (1) (1).svg" alt="icon">
+        <div class="icon-name"> ROI Calculater</div>
+        <button class="btn btn-light special"><a class="landing-button-2" href="./ROI CALCULATER/Assignment-1C (1).png" target="_blank">Know more >></a></button>
+       
+      </div>
+      <div class="w-100"></div>
+      <div class="col coloum-box ">
+        <img src="./img/abacus (1) (1).svg" alt="icon">
+        <div class="icon-name">Professional Educational App</div>
+      </div>
+      <div class="col coloum-box ">
+        <img src="./img/abacus (1) (1).svg" alt="icon">
+        <div class="icon-name">Fun Learning App</div>
+      </div>
+      <div class="col coloum-box ">
+        <img src="./img/abacus (1) (1).svg" alt="icon">
+        <div class="icon-name">Fun Learning App</div>
+      </div>
+      <div class="col coloum-box ">
+        <img src="./img/abacus (1) (1).svg" alt="icon">
+        <div class="icon-name">Fun Learning App</div>
+      </div>
+    </div>
+    <div>
+      <div class="row booking-box">
+        <div class="col-8 booking-content">
+          <h3>looking for Web Designer Position</h3>
+        <h2>html,css,bootstrap,wordpress,Jquery</h2>
+        <button type="button" class="btn book-consultation" href="mailto:nsmitawa123@gmail.com">Contact Me</button>
+        <!-- <button class="button"><a href="tel:8685014330">Schedule a call</a></button> -->
+        </div>
+        <div class="col-4">
+          <img src="./img/Group 30545 (1).svg">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  </div>
+
+
+
+
+
+
+
 </body>
 
 </html>
