--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
       <div class="row booking-box">
         <div class="col-8 booking-content">
           <h3>looking for Web Designer Position</h3>
-        <h2>html,css,bootstrap,wordpress,Jquery</h2>
+          <!-- <div>html,css,bootstrap,wordpress,Jquery</div> -->
         <button type="button" class="btn book-consultation" href="mailto:nsmitawa123@gmail.com">Contact Me</button>
         <!-- <button class="button"><a href="tel:8685014330">Schedule a call</a></button> -->
         </div>
         <div class="col-4">
-          <img src="./img/Group 30545 (1).svg">
+          <img class="contact-img" src="./img/Group 30545 (1).svg">
         </div>
       </div>
     </div>
