--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
     <div class="row">
       <div class="col coloum-box active ">
         <img src="./img/video.svg" alt="icon">
-        <div class="icon-name">Landing Page</div>
+        <div class="icon-name">WordPress Page</div>
         <!-- <button type="button" class="btn btn-light"><a href="./11-June/index.html" target="_blank"></a>Know More</button> -->
-        <button class="btn btn-light"><a class="landing-button" href="./11-June/index.html" target="_blank">Know more >></a></button>
+        <button class="btn btn-light"><a class="landing-button" href="https://www.zeeva.in/dr-shweta-goswami/" target="_blank">View Page >></a></button>
       </div>
       <div class="col coloum-box ">
         <img src="./img/abacus (1) (1).svg" alt="icon">
         <div class="icon-name"> landing Page-2</div>
-        <button class="btn btn-light special"><a class="landing-button-2" href="./page 2/Index.html" target="_blank">Know more >></a></button>
+        <button class="btn btn-light special"><a class="landing-button-2" href="./page 2/Index.html" target="_blank">View Page >></a></button>
       </div>
       <div class="col coloum-box ">
         <img src="./img/abacus (1) (1).svg" alt="icon">
-        <div class="icon-name"> Figma PSD</div>
-        <button class="btn btn-light special"><a class="landing-button-2" href="./PSD to HTML/UI-Page.pdf" target="_blank">Know more >></a></button>
+        <div class="icon-name">Make in Figma</div>
+        <button class="btn btn-light special"><a class="landing-button-2" href="./PSD to HTML/UI-Page.pdf" target="_blank">View File >></a></button>
       </div>
       <div class="col coloum-box ">
         <img src="./img/abacus (1) (1).svg" alt="icon">
@@ -88,11 +88,13 @@
       <div class="w-100"></div>
       <div class="col coloum-box ">
         <img src="./img/abacus (1) (1).svg" alt="icon">
-        <div class="icon-name">Professional Educational App</div>
+        <div class="icon-name"> Hotel Page</div>
+        <button class="btn btn-light special"><a class="landing-button-2" href="./Directone/index.html" target="_blank">Know more >></a></button>
       </div>
       <div class="col coloum-box ">
         <img src="./img/abacus (1) (1).svg" alt="icon">
-        <div class="icon-name">Fun Learning App</div>
+        <div class="icon-name"> startup Mock-up</div>
+        <button class="btn btn-light special"><a class="landing-button-2" href="./home-startup/index.html" target="_blank">Know more >></a></button>
       </div>
       <div class="col coloum-box ">
         <img src="./img/abacus (1) (1).svg" alt="icon">
