--- a/index.html
+++ b/index.html
@@ -1,296 +1,242 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-L0CST5M4EJ"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-      gtag("config", "G-L0CST5M4EJ");
-    </script>
-    <!-- favicon -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-L0CST5M4EJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-    <!-- =====BOX ICONS===== -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-    <!-- font awesome  -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
-      crossorigin="anonymous"
-    />
-    <!-- style css  -->
-    <link rel="stylesheet" href="css/styles.css" />
+    gtag("config", "G-L0CST5M4EJ");
+  </script>
+  <!-- favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
-    <title>Y-Garg</title>
-  </head>
-  <body>
-    <!--===== HEADER =====-->
-    <header class="l-header">
-      <nav class="nav bd-grid">
-        <div>
-          <a href="#" class="nav__logo">Y-Garg</a>
-        </div>
+  <!-- =====BOX ICONS===== -->
+  <link href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css" rel="stylesheet" />
+  <!-- font awesome  -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+    integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous" />
+  <!-- style css  -->
+  <link rel="stylesheet" href="css/styles.css" />
 
-        <div class="nav__menu" id="nav-menu">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#home" class="nav__link active">Home</a>
-            </li>
-            <li class="nav__item">
-              <a href="#about" class="nav__link">About</a>
-            </li>
-            <li class="nav__item">
-              <a href="#skills" class="nav__link">Skills</a>
-            </li>
-            <li class="nav__item">
-              <a href="#work" class="nav__link">Experience</a>
-            </li>
-            <li class="nav__item">
-              <a href="#contact" class="nav__link">Contact</a>
-            </li>
-          </ul>
-        </div>
+  <title>Naresh Mitawa</title>
+</head>
 
-        <div class="nav__toggle" id="nav-toggle">
-          <i class="bx bx-menu"></i>
-        </div>
-      </nav>
-    </header>
+<body>
+  <!--===== HEADER =====-->
+  <header class="l-header">
+    <nav class="nav bd-grid">
+      <div>
+        <a href="#" class="nav__logo">Naresh Mitawa</a>
+      </div>
 
-    <main class="l-main">
-      <!--===== HOME =====-->
-      <section class="home bd-grid" id="home">
-        <div class="home__data">
-          <h1 class="home__title">
-            Hii, I am<br />
-            <span class="home__title-color">Yash</span> an<br />
-            Entrepreneur
-          </h1>
+      <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#home" class="nav__link active">Home</a>
+          </li>
+          <li class="nav__item">
+            <a href="#about" class="nav__link">About</a>
+          </li>
+          <li class="nav__item">
+            <a href="#skills" class="nav__link">Skills</a>
+          </li>
+          <li class="nav__item">
+            <a href="#work" class="nav__link">Experience</a>
+          </li>
+          <li class="nav__item">
+            <a href="#contact" class="nav__link">Contact</a>
+          </li>
+        </ul>
+      </div>
 
-          <a href="#contact" class="button">Contact</a>
-        </div>
+      <div class="nav__toggle" id="nav-toggle">
+        <i class="bx bx-menu"></i>
+      </div>
+    </nav>
+  </header>
 
-        <div class="home__social">
-          <a
-            href="https://www.linkedin.com/in/yash-garg-30b0b01bb/"
-            class="home__social-icon"
-            target="_blank"
-          >
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          <a
-            href="https://www.instagram.com/yash431garg/"
-            class="home__social-icon"
-            target="_blank"
-          >
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a
-            href="https://twitter.com/Yash431garg"
-            class="home__social-icon"
-            target="_blank"
-          >
-            <i class="fab fa-twitter"></i
-          ></a>
-          <a
-            href="https://github.com/yash431garg"
-            class="home__social-icon"
-            target="_blank"
-          >
-            <i class="fab fa-github"></i
-          ></a>
-        </div>
+  <main class="l-main">
+    <!--===== HOME =====-->
+    <section class="home bd-grid" id="home">
+      <div class="home__data">
+        <h1 class="home__title">
+          Hii, I am<br />
+          <span class="home__title-color">Naresh</span> an<br />
+          Entrepreneur
+        </h1>
 
-        <div class="home__img">
-          <img src="img/y-garg-top.png" alt="Yash Garg" />
-        </div>
-      </section>
+        <a href="#contact" class="button">Contact</a>
+      </div>
 
-      <!--===== ABOUT =====-->
-      <section class="about section" id="about">
-        <h2 class="section-title">About</h2>
-
-        <div class="about__container bd-grid">
-          <div class="about__img">
-            <img src="img/y-garg.jpeg" alt="Yash Garg" />
-          </div>
-
-          <div>
-            <h2 class="about__subtitle">An Entrepreneur</h2>
-            <p class="about__text">
-              Passionate about programming & Tech has worked with startups.
-              Believe in Innovation. Involved in Stocks & Crypto. Working as a
-              developer to have some experience & will start soon by launching
-              my own products. Text me we will have a chat.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <!--===== SKILLS =====-->
-      <section class="skills section" id="skills">
-        <h2 class="section-title">Skills</h2>
-
-        <div class="skills__container bd-grid">
-          <div>
-            <h2 class="skills__subtitle">Profesional Skills</h2>
-            <p class="skills__text">
-              These are the skills which I am good at or I am learning. These
-              skills help me stand out from others. I love to have some
-              discussions to improve over the skills & make a good start.
-            </p>
-            <div class="skills__data">
-              <div class="skills__names">
-                <i class="fab fa-js-square skills__icon"></i>
-
-                <span class="skills__name">Web Development</span>
-              </div>
-              <div class="skills__bar skills__web"></div>
-              <div></div>
-            </div>
-            <div class="skills__data">
-              <div class="skills__names">
-                <i class="fab fa-ethereum skills__icon"></i>
-
-                <span class="skills__name">BlockChain Development</span>
-              </div>
-              <div class="skills__bar skills__blockchain"></div>
-              <div></div>
-            </div>
-            <div class="skills__data">
-              <div class="skills__names">
-                <i class="fas fa-pen-alt skills__icon"></i>
-
-                <span class="skills__name">Content Writing</span>
-              </div>
-              <div class="skills__bar skills__content"></div>
-              <div></div>
-            </div>
-            <div class="skills__data">
-              <div class="skills__names">
-                <i class="fas fa-chart-line skills__icon"></i>
-
-                <span class="skills__name">Stock Trading</span>
-              </div>
-              <div class="skills__bar skills__market"></div>
-              <div></div>
-            </div>
-          </div>
-
-          <div>
-            <img src="img/skills.png" alt="" class="skills__img" />
-          </div>
-        </div>
-      </section>
-
-      <!--===== WORK =====-->
-      <section class="work section" id="work">
-        <h2 class="section-title">Work</h2>
-
-        <div class="work__container bd-grid">
-          <div class="work__img">
-            <img src="img/work1.png" alt="trading" />
-          </div>
-          <div class="work__img">
-            <img src="img/work2.png" alt="blockchain development" />
-          </div>
-          <div class="work__img">
-            <img src="img/work3.png" alt="Coding" />
-          </div>
-          <div class="work__img">
-            <img src="img/work4.png" alt="Big Business" />
-          </div>
-          <div class="work__img">
-            <img src="img/work5.png" alt="Data" />
-          </div>
-          <div class="work__img">
-            <img src="img/work6.png" alt="Tweet" />
-          </div>
-        </div>
-      </section>
-
-      <!--===== CONTACT =====-->
-      <section class="contact section" id="contact">
-        <h2 class="section-title">Contact</h2>
-
-        <div class="contact__container bd-grid">
-          <!-- action="mailto:name@gmail.com" -->
-          <!-- method="POST" -->
-          <form class="contact__form" method="post" action="/">
-            <input
-              type="text"
-              id="name"
-              placeholder="Name"
-              class="contact__input"
-            />
-            <input
-              type="email"
-              id="email"
-              placeholder="Email"
-              class="contact__input"
-            />
-            <textarea
-              id="message"
-              cols="0"
-              placeholder="Message"
-              rows="10"
-              class="contact__input"
-            ></textarea>
-            <!-- type="submit" -->
-            <button class="contact__button button" type="submit">Enter</button>
-          </form>
-        </div>
-      </section>
-    </main>
-
-    <!--===== FOOTER =====-->
-    <footer class="footer">
-      <p class="footer__title">Y-Garg</p>
-      <div class="footer__social">
-        <a
-          href="https://www.linkedin.com/in/yash-garg-30b0b01bb/"
-          class="footer__icon"
-          target="_blank"
-        >
+      <div class="home__social">
+        <a href="https://www.linkedin.com/in/yash-garg-30b0b01bb/" class="home__social-icon" target="_blank">
           <i class="fab fa-linkedin-in"></i>
         </a>
-        <a
-          href="https://www.instagram.com/yash431garg/"
-          class="footer__icon"
-          target="_blank"
-        >
+        <a href="https://www.instagram.com/yash431garg/" class="home__social-icon" target="_blank">
           <i class="fab fa-instagram"></i>
         </a>
-        <a
-          href="https://twitter.com/Yash431garg"
-          class="footer__icon"
-          target="_blank"
-        >
-          <i class="fab fa-twitter"></i
-        ></a>
+        <a href="https://twitter.com/Yash431garg" class="home__social-icon" target="_blank">
+          <i class="fab fa-twitter"></i></a>
+        <a href="https://github.com/yash431garg" class="home__social-icon" target="_blank">
+          <i class="fab fa-github"></i></a>
       </div>
-      <p>&#169; 2022 copyright all right reserved</p>
-    </footer>
 
-    <!--===== SCROLL REVEAL =====-->
-    <script src="https://unpkg.com/scrollreveal"></script>
+      <div class="home__img">
+        <img src="img/y-garg-top.png" alt="Yash Garg" />
+      </div>
+    </section>
 
-    <!--===== MAIN JS =====-->
-    <script src="js/main.js"></script>
-  </body>
+    <!--===== ABOUT =====-->
+    <section class="about section" id="about">
+      <h2 class="section-title">About</h2>
+
+      <div class="about__container bd-grid">
+        <div class="about__img">
+          <img src="img/y-garg.jpeg" alt="Yash Garg" />
+        </div>
+
+        <div>
+          <h2 class="about__subtitle">An Entrepreneur</h2>
+          <p class="about__text">
+            Passionate about programming & Tech has worked with startups.
+            Believe in Innovation. Involved in Stocks & Crypto. Working as a
+            developer to have some experience & will start soon by launching
+            my own products. Text me we will have a chat.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!--===== SKILLS =====-->
+    <section class="skills section" id="skills">
+      <h2 class="section-title">Skills</h2>
+
+      <div class="skills__container bd-grid">
+        <div>
+          <h2 class="skills__subtitle">Profesional Skills</h2>
+          <p class="skills__text">
+            These are the skills which I am good at or I am learning. These
+            skills help me stand out from others. I love to have some
+            discussions to improve over the skills & make a good start.
+          </p>
+          <div class="skills__data">
+            <div class="skills__names">
+              <i class="fab fa-js-square skills__icon"></i>
+
+              <span class="skills__name">Web Development</span>
+            </div>
+            <div class="skills__bar skills__web"></div>
+            <div></div>
+          </div>
+          <div class="skills__data">
+            <div class="skills__names">
+              <i class="fab fa-ethereum skills__icon"></i>
+
+              <span class="skills__name">BlockChain Development</span>
+            </div>
+            <div class="skills__bar skills__blockchain"></div>
+            <div></div>
+          </div>
+          <div class="skills__data">
+            <div class="skills__names">
+              <i class="fas fa-pen-alt skills__icon"></i>
+
+              <span class="skills__name">Content Writing</span>
+            </div>
+            <div class="skills__bar skills__content"></div>
+            <div></div>
+          </div>
+          <div class="skills__data">
+            <div class="skills__names">
+              <i class="fas fa-chart-line skills__icon"></i>
+
+              <span class="skills__name">Stock Trading</span>
+            </div>
+            <div class="skills__bar skills__market"></div>
+            <div></div>
+          </div>
+        </div>
+
+        <div>
+          <img src="img/skills.png" alt="" class="skills__img" />
+        </div>
+      </div>
+    </section>
+
+    <!--===== WORK =====-->
+    <section class="work section" id="work">
+      <h2 class="section-title">Work</h2>
+
+      <div class="work__container bd-grid">
+        <div class="work__img">
+          <img src="img/work1.png" alt="trading" />
+        </div>
+        <div class="work__img">
+          <img src="img/work2.png" alt="blockchain development" />
+        </div>
+        <div class="work__img">
+          <img src="img/work3.png" alt="Coding" />
+        </div>
+        <div class="work__img">
+          <img src="img/work4.png" alt="Big Business" />
+        </div>
+        <div class="work__img">
+          <img src="img/work5.png" alt="Data" />
+        </div>
+        <div class="work__img">
+          <img src="img/work6.png" alt="Tweet" />
+        </div>
+      </div>
+    </section>
+
+    <!--===== CONTACT =====-->
+    <section class="contact section" id="contact">
+      <h2 class="section-title">Contact</h2>
+
+      <div class="contact__container bd-grid">
+        <!-- action="mailto:name@gmail.com" -->
+        <!-- method="POST" -->
+        <form class="contact__form" method="post" action="/">
+          <input type="text" id="name" placeholder="Name" class="contact__input" />
+          <input type="email" id="email" placeholder="Email" class="contact__input" />
+          <textarea id="message" cols="0" placeholder="Message" rows="10" class="contact__input"></textarea>
+          <!-- type="submit" -->
+          <button class="contact__button button" type="submit">Enter</button>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <!--===== FOOTER =====-->
+  <footer class="footer">
+    <p class="footer__title">Y-Garg</p>
+    <div class="footer__social">
+      <a href="https://www.linkedin.com/in/yash-garg-30b0b01bb/" class="footer__icon" target="_blank">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+      <a href="https://www.instagram.com/yash431garg/" class="footer__icon" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://twitter.com/Yash431garg" class="footer__icon" target="_blank">
+        <i class="fab fa-twitter"></i></a>
+    </div>
+    <p>&#169; 2022 copyright all right reserved</p>
+  </footer>
+
+  <!--===== SCROLL REVEAL =====-->
+  <script src="https://unpkg.com/scrollreveal"></script>
+
+  <!--===== MAIN JS =====-->
+  <script src="./assets/js/main.js"></script>
+</body>
+
 </html>
