--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
     integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous" />
   <!-- style css  -->
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="./assets/css/styles.css" />
 
   <title>Naresh Mitawa</title>
 </head>
