--- a/index.html
+++ b/index.html
@@ -78,20 +78,20 @@
       </div>
 
       <div class="home__social">
-        <a href="https://www.linkedin.com/in/yash-garg-30b0b01bb/" class="home__social-icon" target="_blank">
+        <a href="https://www.linkedin.com/in/naresh-68693b171/" class="home__social-icon" target="_blank">
           <i class="fab fa-linkedin-in"></i>
         </a>
-        <a href="https://www.instagram.com/yash431garg/" class="home__social-icon" target="_blank">
+        <a href="https://www.instagram.com/nsmitawa_/" class="home__social-icon" target="_blank">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="https://twitter.com/Yash431garg" class="home__social-icon" target="_blank">
+        <a href="https://twitter.com/nsmmitawa" class="home__social-icon" target="_blank">
           <i class="fab fa-twitter"></i></a>
-        <a href="https://github.com/yash431garg" class="home__social-icon" target="_blank">
+        <a href="https://github.com/mitawa0001" class="home__social-icon" target="_blank">
           <i class="fab fa-github"></i></a>
       </div>
 
       <div class="home__img">
-        <img src="img/y-garg-top.png" alt="Yash Garg" />
+        <img src="./assets/img/y-garg-top.png" alt="Naresh Mitawa" />
       </div>
     </section>
 
@@ -137,15 +137,7 @@
             <div class="skills__bar skills__web"></div>
             <div></div>
           </div>
-          <div class="skills__data">
-            <div class="skills__names">
-              <i class="fab fa-ethereum skills__icon"></i>
-
-              <span class="skills__name">BlockChain Development</span>
-            </div>
-            <div class="skills__bar skills__blockchain"></div>
-            <div></div>
-          </div>
+          
           <div class="skills__data">
             <div class="skills__names">
               <i class="fas fa-pen-alt skills__icon"></i>
@@ -167,7 +159,7 @@
         </div>
 
         <div>
-          <img src="img/skills.png" alt="" class="skills__img" />
+          <img src="./assets/img/skills.png" alt="" class="skills__img" />
         </div>
       </div>
     </section>
