add some changes

--- a/index.html
+++ b/index.html
@@ -212,13 +212,13 @@
   <footer class="footer">
     <p class="footer__title">Y-Garg</p>
     <div class="footer__social">
-      <a href="https://www.linkedin.com/in/yash-garg-30b0b01bb/" class="footer__icon" target="_blank">
+      <a href="https://www.linkedin.com/in/naresh-68693b171/" class="footer__icon" target="_blank">
         <i class="fab fa-linkedin-in"></i>
       </a>
-      <a href="https://www.instagram.com/yash431garg/" class="footer__icon" target="_blank">
+      <a href="https://www.instagram.com/nsmitawa_/" class="footer__icon" target="_blank">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="https://twitter.com/Yash431garg" class="footer__icon" target="_blank">
+      <a href="https://twitter.com/nsmmitawa" class="footer__icon" target="_blank">
         <i class="fab fa-twitter"></i></a>
     </div>
     <p>&#169; 2022 copyright all right reserved</p>
