--- a/index.html
+++ b/index.html
@@ -101,16 +101,15 @@
 
       <div class="about__container bd-grid">
         <div class="about__img">
-          <img src="img/y-garg.jpeg" alt="Yash Garg" />
+          <img src="./assets/img/WhatsApp Image 2022-01-28 at 6.07.52 PM.jpeg" alt="Naresh Mitawa" />
         </div>
 
         <div>
           <h2 class="about__subtitle">An Entrepreneur</h2>
           <p class="about__text">
             Passionate about programming & Tech has worked with startups.
-            Believe in Innovation. Involved in Stocks & Crypto. Working as a
-            developer to have some experience & will start soon by launching
-            my own products. Text me we will have a chat.
+            Believe in Innovation and Creative Design. Involved in Stocks & Derivatives Market. Working as a
+            developer to have some Experience.
           </p>
         </div>
       </div>
