--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 
       <div class="about__container bd-grid">
         <div class="about__img">
-          <img src="./assets/img/WhatsApp Image 2022-01-28 at 6.07.52 PM.jpeg" alt="Naresh Mitawa" />
+          <img src="./assets/img/profile-canva.jpg" alt="Naresh Mitawa" />
         </div>
 
         <div>
-          <h2 class="about__subtitle">An Entrepreneur</h2>
+          <h2 class="about__subtitle">An Developer</h2>
           <p class="about__text">
             Passionate about programming & Tech has worked with startups.
             Believe in Innovation and Creative Design. Involved in Stocks & Derivatives Market. Working as a
@@ -169,7 +169,8 @@
 
       <div class="work__container bd-grid">
         <div class="work__img">
-          <img src="img/work1.png" alt="trading" />
+          <a href="https://supertradings.com/"><img src="./assets/img/Stock trading.jpeg" alt="Custom Webapp" /></a>
+          
         </div>
         <div class="work__img">
           <img src="img/work2.png" alt="blockchain development" />
