add sample works

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h1 class="home__title">
           Hii, I am<br />
           <span class="home__title-color">Naresh</span> an<br />
-          Entrepreneur
+          Developer
         </h1>
 
         <a href="#contact" class="button">Contact</a>
@@ -107,7 +107,7 @@
         <div>
           <h2 class="about__subtitle">An Developer</h2>
           <p class="about__text">
-            Passionate about programming & Tech has worked with startups.
+            Passionate about programming & Tech has worked with startups. 
             Believe in Innovation and Creative Design. Involved in Stocks & Derivatives Market. Working as a
             developer to have some Experience.
           </p>
@@ -123,7 +123,7 @@
         <div>
           <h2 class="skills__subtitle">Profesional Skills</h2>
           <p class="skills__text">
-            These are the skills which I am good at or I am learning. These
+            These are the skills HTML CSS BOOTSTRAP JQUERY JAVASCRIPT REACT(BASIC) WORDPRESS, which I am good at or I am learning. These
             skills help me stand out from others. I love to have some
             discussions to improve over the skills & make a good start.
           </p>
@@ -139,9 +139,9 @@
           
           <div class="skills__data">
             <div class="skills__names">
-              <i class="fas fa-pen-alt skills__icon"></i>
+              <i class="fas fa-file-invoice skills__icon"></i>
 
-              <span class="skills__name">Content Writing</span>
+              <span class="skills__name">Portfolio Management</span>
             </div>
             <div class="skills__bar skills__content"></div>
             <div></div>
@@ -169,23 +169,23 @@
 
       <div class="work__container bd-grid">
         <div class="work__img">
-          <a href="https://supertradings.com/"><img src="./assets/img/Stock trading.jpeg" alt="Custom Webapp" /></a>
+          <a href="https://supertradings.com/"  target="_blank"><img src="./assets/img/Stock trading.jpeg" alt="Custom HTMl CSS UI" /></a>
           
         </div>
         <div class="work__img">
-          <img src="img/work2.png" alt="blockchain development" />
+          <a href="https://github.com/mitawa0001/Gfew-webapp" target="_blank"><img src="./assets/img/react-1.jpeg" alt="Custom React-App UI"/></a>
         </div>
         <div class="work__img">
-          <img src="img/work3.png" alt="Coding" />
+          <a href="https://www.brartamber.com/" target="_blank"><img src="./assets/img/wordpress-1.jpeg" alt="Wordpress"/></a>
         </div>
         <div class="work__img">
-          <img src="img/work4.png" alt="Big Business" />
+          <a href="https://cdmdance.com/" target="_blank"><img src="./assets/img/wordpress.jpeg" alt="Wordpress"/></a>
         </div>
         <div class="work__img">
-          <img src="img/work5.png" alt="Data" />
+          <a href="./assets/parallax website/index.html" target="_blank"><img src="./assets/img/parallex.jpeg" alt="Custom Motion Website"/></a>
         </div>
         <div class="work__img">
-          <img src="img/work6.png" alt="Tweet" />
+          <a href="./assets/Square Yards Hotel/index.html" target="_blank"><img src="./assets/img/custom hotel.jpeg" alt="Custom hotel"/></a>
         </div>
       </div>
     </section>
