--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
   <!--===== FOOTER =====-->
   <footer class="footer">
-    <p class="footer__title">Y-Garg</p>
+    <p class="footer__title">Naresh Mitawa</p>
     <div class="footer__social">
       <a href="https://www.linkedin.com/in/naresh-68693b171/" class="footer__icon" target="_blank">
         <i class="fab fa-linkedin-in"></i>
