--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           <li class="nav__item">
             <a href="#contact" class="nav__link">Contact</a>
           </li>
+          <li class="nav__item">
+            <a href="./assets/NARESH__MITAWA__RESUME.pdf.pdf" class="nav__link">Resume</a>
+          </li>
         </ul>
       </div>
 
