--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous" />
   <!-- style css  -->
   <link rel="stylesheet" href="./assets/css/styles.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
   <title>Naresh Mitawa</title>
 </head>
@@ -56,7 +58,7 @@
             <a href="#contact" class="nav__link">Contact</a>
           </li>
           <li class="nav__item">
-            <a href="./assets/NARESH__MITAWA__RESUME.pdf.pdf" class="nav__link">Resume</a>
+            <a href="./assets/Resume_Naresh_Mitawa_updated.pdf" class="nav__link">Resume</a>
           </li>
         </ul>
       </div>
@@ -73,7 +75,7 @@
       <div class="home__data">
         <h1 class="home__title">
           Hii, I am<br />
-          <span class="home__title-color">Naresh</span> an<br />
+          <span class="home__title-color">Naresh</span> a<br />
           Developer
         </h1>
 
@@ -108,9 +110,9 @@
         </div>
 
         <div>
-          <h2 class="about__subtitle">An Developer</h2>
+          <h2 class="about__subtitle">A Developer</h2>
           <p class="about__text">
-            Passionate about programming & Tech has worked with startups. 
+            Passionate about programming & Tech has worked with startups.
             Believe in Innovation and Creative Design. Involved in Stocks & Derivatives Market. Working as a
             developer to have some Experience.
           </p>
@@ -126,7 +128,8 @@
         <div>
           <h2 class="skills__subtitle">Profesional Skills</h2>
           <p class="skills__text">
-            These are the skills HTML CSS BOOTSTRAP JQUERY JAVASCRIPT REACT(BASIC) WORDPRESS, which I am good at or I am learning. These
+            These are the skills REACT JS,JQUERY,JAVASCRIPT,MATERIAL UI,ANGULAR(Basic) which I am good at or I am
+            learning. These
             skills help me stand out from others. I love to have some
             discussions to improve over the skills & make a good start.
           </p>
@@ -139,7 +142,7 @@
             <div class="skills__bar skills__web"></div>
             <div></div>
           </div>
-          
+
           <div class="skills__data">
             <div class="skills__names">
               <i class="fas fa-file-invoice skills__icon"></i>
@@ -172,23 +175,153 @@
 
       <div class="work__container bd-grid">
         <div class="work__img">
-          <a href="https://supertradings.com/"  target="_blank"><img src="./assets/img/Stock trading.jpeg" alt="Custom HTMl CSS UI" /></a>
-          
+          <a href="https://company-web.vertipridesolutions.in/" target="_blank"><img src="./assets/img/IT APP.jpg"
+              alt="Build in React JS WebApp" /></a>
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Overview
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <p class="">Tech:- React JS</p>
+                  <div class="text-left w-100">
+                    <p>Custom Hooks, Handle components from different stages.</p>
+                    <p>Form Validations, API data fatch, Routes, Google recaptured, Dynamic Pages</p>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+
+          </div>
         </div>
         <div class="work__img">
-          <a href="https://github.com/mitawa0001/Gfew-webapp" target="_blank"><img src="./assets/img/react-1.jpeg" alt="Custom React-App UI"/></a>
+          <a href="https://github.com/mitawa0001/Gfew-webapp" target="_blank"><img src="./assets/img/react-1.jpeg"
+              alt="Custom React-App UI" /></a>
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Overview
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <p class="">Tech:- React JS</p>
+                  <div class="text-left w-100">
+                    <p>AdminLTE Dashboard</p>
+                    <p>Routing,Componment life cycle used, Material UI</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="work__img">
-          <a href="https://www.brartamber.com/" target="_blank"><img src="./assets/img/wordpress-1.jpeg" alt="Wordpress"/></a>
+          <a href="https://www.brartamber.com/" target="_blank"><img src="./assets/img/mobile_view.jpg"
+              alt="Wordpress" /></a>
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Overview
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <p class="">Tech:- React JS</p>
+                  <div class="text-left w-100">
+                    <p>Mobile view only,Protected Routes,AdminLTE panel,QR code scanner functionality </p>
+                    <p>Form Validations, API data fatch, Routes, Google recaptured, Dynamic Pages</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
         </div>
         <div class="work__img">
-          <a href="https://cdmdance.com/" target="_blank"><img src="./assets/img/wordpress.jpeg" alt="Wordpress"/></a>
+          <a href="https://cdmdance.com/" target="_blank"><img src="./assets/img/parallex.jpeg" alt="Wordpress" /></a>
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Overview
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <p class="">Tech:- Custom HTML,CSS,JAVASCCRIPT</p>
+                  <div class="text-left w-100">
+                    <p>use scorrling effect in header, use js for hover layout</p>
+                    <p>POC of the project as per client need</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="work__img">
+          <a href="./assets/Square Yards Hotel/index.html" target="_blank"><img src="./assets/img/custom hotel.jpeg"
+              alt="Custom hotel" /></a>
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Overview
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <p class="">Tech:- Custom HTML,CSS,BOOTSTRAP</p>
+                  <div class="text-left w-100">
+                    <p>Themeforest theme build as custom as well as responsive part</p>
+                    <p>Componment building exect to the theme</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
         </div>
         <div class="work__img">
-          <a href="./assets/parallax website/index.html" target="_blank"><img src="./assets/img/parallex.jpeg" alt="Custom Motion Website"/></a>
-        </div>
-        <div class="work__img">
-          <a href="./assets/Square Yards Hotel/index.html" target="_blank"><img src="./assets/img/custom hotel.jpeg" alt="Custom hotel"/></a>
+          <a href="./assets/parallax website/index.html" target="_blank"><img src="./assets/img/work5.png"
+              alt="Custom Motion Website" /></a>
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Overview
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <p class="">Portfolio Management</p>
+                  <div class="text-left w-100">
+                    <p>Investment Adviser, Stock Trading, Future and Options, Mutual Funds</p>
+                    <p>Analytics,ITR Filling</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -232,6 +365,9 @@
 
   <!--===== MAIN JS =====-->
   <script src="./assets/js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
